5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1575_1332.log
== TEST (2019-03-21 14:08:43) 
-- CODE:
aresta =
area = 
 
print(round(3//2*(3)**0.5*5**2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:08:56) 
-- CODE:
print(round(3//2*(3)**0.5*5**2, 4))
-- OUTPUT:
43.3013
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:08:58) 
-- CODE:
print(round(3//2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.181005
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
43.3013
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:09:03) 
-- CODE:
print(round(3//2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.141588
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
43.3013
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:09:14) 
-- CODE:
print(round(3/2*(3)**0.5*5**2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:09:15) 
-- CODE:
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.172821
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
